[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui.gd" type="Script" id=1]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0

[node name="dropdown" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 20 )
toggle_mode = true
text = "V"
align = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 24.0
margin_right = 200.0
margin_bottom = 599.0
rect_min_size = Vector2( 200, 575 )
color = Color( 0.4, 0.4, 0.4, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ColorRect/HBoxContainer"]
margin_right = 44.0
margin_bottom = 575.0
custom_constants/margin_left = 44

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ColorRect/HBoxContainer"]
margin_left = 48.0
margin_right = 143.0
margin_bottom = 575.0

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_right = 95.0
margin_bottom = 22.0
custom_constants/margin_top = 22

[node name="target" type="Label" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 95.0
margin_bottom = 40.0
text = "Target"

[node name="target_SpinBox" type="SpinBox" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 95.0
margin_bottom = 68.0
max_value = 6.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 95.0
margin_bottom = 94.0
custom_constants/margin_top = 22

[node name="ProportionalGain" type="RichTextLabel" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 95.0
margin_bottom = 128.0
bbcode_enabled = true
bbcode_text = "[color=#ff0000]Proportional Gain[/color]"
text = "Proportional Gain"
fit_content_height = true
scroll_active = false

[node name="ProportionalGain_SpinBox" type="SpinBox" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 95.0
margin_bottom = 156.0
step = 0.01
allow_greater = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 95.0
margin_bottom = 171.0
custom_constants/margin_top = 11

[node name="IntegralGain" type="RichTextLabel" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 95.0
margin_bottom = 190.0
bbcode_enabled = true
bbcode_text = "[color=#43ec1e]Integral Gain[/color]"
text = "Integral Gain"
fit_content_height = true
scroll_active = false

[node name="IntegralGain_SpinBox" type="SpinBox" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 95.0
margin_bottom = 218.0
step = 0.01
allow_greater = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 95.0
margin_bottom = 233.0
custom_constants/margin_top = 11

[node name="DerivativeGain" type="RichTextLabel" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 95.0
margin_bottom = 267.0
bbcode_enabled = true
bbcode_text = "[color=#1e5dec]Derivative Gain[/color]"
text = "Derivative Gain"
fit_content_height = true
scroll_active = false

[node name="DerivativeGain_SpinBox2" type="SpinBox" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 95.0
margin_bottom = 295.0
step = 0.01
allow_greater = true

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 299.0
margin_right = 95.0
margin_bottom = 321.0
custom_constants/margin_top = 22

[node name="ConstantForce" type="Label" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 95.0
margin_bottom = 339.0
text = "Constant Force"

[node name="ConstantForce_SpinBox" type="SpinBox" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 343.0
margin_right = 95.0
margin_bottom = 367.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 371.0
margin_right = 95.0
margin_bottom = 393.0
custom_constants/margin_top = 22

[node name="quit" type="Button" parent="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 397.0
margin_right = 95.0
margin_bottom = 417.0
text = "Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 603.0
margin_right = 200.0
margin_bottom = 603.0

[connection signal="pressed" from="VBoxContainer/dropdown" to="." method="_on_dropdown_pressed"]
[connection signal="value_changed" from="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer/target_SpinBox" to="." method="_on_target_SpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer/ProportionalGain_SpinBox" to="." method="_on_ProportionalGain_SpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer/IntegralGain_SpinBox" to="." method="_on_IntegralGain_SpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer/DerivativeGain_SpinBox2" to="." method="_on_DerivativeGain_SpinBox2_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer/ConstantForce_SpinBox" to="." method="_on_ConstantForce_SpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/ColorRect/HBoxContainer/VBoxContainer/quit" to="." method="_on_reset_pressed"]
